--- a/project/export_presets.cfg
+++ b/project/export_presets.cfg
@@ -73,7 +73,7 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="com.example.$genname"
+#package/unique_name="com.example.$genname"
 package/name=""
 package/signed=true
 package/app_category=2
