[debug] fixed ray ordering issue and test change to git commit in actions build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -180,7 +180,9 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add --force ${{github.workspace}}/project
+          git add --force ${{github.workspace}}/project/addons/lightSim/bin
+          ls ${{github.workspace}}/project/addons/lightSim/bin
+          echo "status"
           git status
           git commit -m "[automatic] added platform-specific binaries"
           git push
