[impl] added beam interaction with mirrors and mode other bug fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "variant": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "deque": "cpp"
     }
 }
