[Impl] added support for reflections for spotlights and circle lights

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
         "xutility": "cpp",
         "variant": "cpp",
         "fstream": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "numeric": "cpp"
     }
 }
